# downtify

./: .dockerignore  .env.example  .gitignore  .readthedocs.yml  CHANGELOG  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.dockerhub.yml  docker-compose.example.yml  docker-compose.yml  entrypoint.sh  main.py  mkdocs.yml  organizer_service.py  package-lock.json  playlist_monitor.py  pyproject.toml  requirements-app.txt  requirements.txt  version.sh  zensical.toml
.github/: dependabot.yml  labeler.yml
.github/DISCUSSION_TEMPLATE/: announcements.yml  general.yml  ideas.yml  q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml  translation_request.yml
.github/workflows/: build.yml  codeflash.yaml  docker-hub-fork.yml  docker-publish-ghcr.yml  docker.yml  docs.yml  labeler.yml  test.yml
docs/: api-reference.md  changelog.md  contributing.md  how-it-works.md  index.md  requirements.txt
docs/features/: download-settings.md  file-organization.md  index.md  internationalization.md  library-catalog.md  lyrics.md  m3u-export.md  player.md  playlist-monitor.md
docs/getting-started/: docker-compose.md  environment-variables.md  index.md  installation.md  one-click.md
docs/stylesheets/: extra.css
downtify/: api.py  cover_art.py  cover_cache.py  download_pool.py  downloader.py  itunes.py  library_cache_keys.py  library_catalog.py  library_delete.py  library_metadata.py  library_metadata_cache.py  library_paths.py  library_paths_cache.py  library_reconcile.py  lyrics.py  m3u.py  monitor.py  navidrome.py  navidrome_index.py  organizer_service.py  playlist_batches.py  playlist_catalog.py  playlist_spotify_cache.py  providers.py  slskd_provider.py  spotify.py  sqlite_utils.py  telemetry.py  track_index.py  track_tag_match.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  index.css
frontend/src/__tests__/: i18n.test.js  url.test.js
frontend/src/components/: DownloadList.vue  Hero.vue  (+9 more)
scripts/: docker-push.sh  docker-test.sh  obscure_secrets.py
static/: style.css
static/css/: style.css
static/js/: script.js  spinner.js
templates/: index.html  list.html
tests/: conftest.py  test_api_download_hints.py  test_api_incomplete_playlists.py  test_api_queue.py  test_api_settings.py  test_api_skip_existing.py  test_bump_version.py  test_cover_art.py  test_cover_cache.py  test_download.py  test_download_pool.py  test_downloader.py  test_downloader_extended.py  test_index.py  test_library_cache_keys.py  test_library_catalog.py  test_library_delete.py  test_library_metadata.py  test_library_metadata_cache.py  test_library_paths.py  test_library_reconcile.py  test_m3u.py  test_monitor_schedule.py  test_navidrome.py  test_navidrome_index.py  test_playlist_batches.py  test_playlist_catalog.py  test_playlist_catalog_lookup.py  test_playlist_refresh_after_download.py  test_playlist_spotify_cache.py  test_providers.py  test_sanitize.py  test_slskd_leave_in_place.py  test_slskd_override.py  test_slskd_responses.py  test_slskd_timeout.py  test_spotify_embed.py  test_spotify_url.py  test_text_search_stub.py  test_track_index.py  (+2 more)
(+24 files in other folders)
