[project]
name = "downtify"
version = "1.1.3"
description = "Download your Spotify playlists and songs along with album art and metadata in a self-hosted way via Docker"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "load-dotenv>=0.1.0",
    "spotdl",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.uv]
upgrade = true

[tool.uv.sources]
spotdl = { git = "https://github.com/nyekuuu/spotify-downloader.git" }

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E501", "PLR0915"]
