[project]
name = "downtify"
version = "2.5.0"
description = "Download your Spotify playlists and songs along with album art and metadata in a self-hosted way via Docker"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.110",
    "load-dotenv>=0.1.0",
    "loguru>=0.7.3",
    "mutagen>=1.47",
    "requests>=2.32",
    "uvicorn>=0.23",
    "websockets>=12.0",
    "yt-dlp>=2026.2.4",
    "ytmusicapi>=1.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
upgrade = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E501", "PLR0915", "PLR2004", "PLR1702", "PLR0912", "PLR0911"]
"downtify/*.py" = ["E501", "PLR0913", "PLR0917", "PLR2004", "PLW0603", "PLR0911", "PLR0915", "PLR0912"]
"tests/*.py" = ["PLR2004"]
